--- a/app/assets/stylesheets/_defaults.scss
+++ b/app/assets/stylesheets/_defaults.scss
@@ -11,7 +11,7 @@ html {
 body {
   background: #fff;
 
-  position: relative;
+  position: inherit;
   color: #444;
   font: 300 13px/1.6 Roboto, 'Helvetica Neue', Helvetica, Arial;
   margin: 0 auto;
