modified login function

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -25,6 +25,13 @@ $red: #ce2434;
     margin: 48px 0 0 48px;
 }
 
+.notice {
+    color:$red;
+    font-size: 18px;
+    font-weight: 400;
+    margin: 48px 0 0 48px;
+}
+
 //new.html.erb
 #error_explanation {
     margin: 24px 0 0 48px;
