--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -32,6 +32,13 @@ $red: #ce2434;
     margin: 48px 0 0 48px;
 }
 
+.alert {
+    color:$red;
+    font-size: 18px;
+    font-weight: 400;
+    margin: 48px 0 0 48px;
+}
+
 //new.html.erb
 #error_explanation {
     margin: 24px 0 0 48px;
@@ -79,13 +86,17 @@ $red: #ce2434;
     #user_password_confirmation {
         width: 300px;
     }
+
+    #user_current_password {
+        width: 300px;
+    }
 }
 
 .actions {
     margin: 24px 0 24px 48px;
 
     input { 
-        width: 100px;
+        width: 150px;
         height: 25px;
         border-radius: 20px;
         color: $black;
@@ -108,4 +119,14 @@ a {
     input {
         width: 250px;
     }
+}
+
+// edit.html.erb
+#title_edit {
+    @include devise-title;
+}
+
+#cancel {
+    @include devise-title;
+    font-size: 18px;
 }
