--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// app.js
+#searchUserTitle {
+    text-align: center;
+    margin: 100px 0 0 0;
+}
+
+// searchBox.js
+.searchBox {
+    text-align: center;
+    padding: 20px 0 0 0;
+
+    input {
+        width: 300px;
+        height: 30px;
+    }
+}
