--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,4 +1,5 @@
 %div{id: 'header'}
+    = link_to 'Find Friends', 'users/search'
     = link_to 'Edit', '/users/edit'
     = link_to 'Logout', '/users/sign_out', {method: 'delete'}
 #react-main
