--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -8,10 +8,17 @@
     margin: 100px 0 0 0;
 }
 
+#searchUserExplain {
+    text-align: center;
+    margin: 10px 0 0 0;
+    font-size: 10px;
+    color: #bdbdbd;
+}
+
 // searchBox.js
 .searchBox {
     text-align: center;
-    padding: 20px 0 0 0;
+    padding: 10px 0 0 0;
 
     input {
         width: 300px;
