--- a/app/assets/stylesheets/partials/_userList.scss
+++ b/app/assets/stylesheets/partials/_userList.scss
@@ -85,8 +85,22 @@
   }
 }
 
-.hoge {
+#friendList {
   width: 299px;
-  height: 100px;
-  background-color: red;
+  height: 100%;
+  color: #424242;
+  overflow: scroll;
+
+  li {
+    width: 299px;
+    height: 150px;
+    padding: 12px 0 0 12px;
+    font-size: 24px;
+    font-weight: 400;
+    border-bottom: 0.5px solid #e0e0e0;
+
+    span {
+      border-bottom: 0.5px solid #e0e0e0;
+    }
+  }
 }
