--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -44,6 +44,8 @@
             margin-top: 5px;
             font-size: 15px;
             border-bottom: inset 0.5px #f5f5f5;
+            cursor: pointer;
+            cursor: hand;
         }
     }
 }
