--- a/app/assets/stylesheets/partials/_header.scss
+++ b/app/assets/stylesheets/partials/_header.scss
@@ -16,4 +16,13 @@
       font-size: 18px;
       text-decoration: none;
   }
+
+  span {
+    float: left;
+    font-weight: 400;
+    margin: 0 0 0 12px;
+    color: #fdfdfd;
+    font-size: 18px;
+    text-decoration: none;
+  }
 }
