--- a/app/assets/stylesheets/partials/_messagesBox.scss
+++ b/app/assets/stylesheets/partials/_messagesBox.scss
@@ -2,12 +2,18 @@
 
   &__list {
     position: absolute;
+    color: black;
     top: 60px;
     left: 300px;
     right: 0;
     bottom: 67px;
     padding: 30px;
     overflow-y: scroll;
+
+    .eachMessage {
+      height: 100px;
+      width: 100px;
+    }
   }
 
   &__item {
