--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -47,5 +47,9 @@
             cursor: pointer;
             cursor: hand;
         }
+
+        .selected-user {
+            background-color: #424242;
+        }
     }
 }
